package sflix

// TODO remove global state [1pt]
object Globals {
  // Is the loyalty points bonus active?
  // If it is active, we double all the points
  var LoyaltyPointsBonus = false

  // shall the name and the total price be emphasized?
  var UseEmphasis = false
}
