package sflix

// TODO remove global state [1pt]
object ServiceLocator {

  var movieService: MovieService = null

}
